--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css/styles.css">
+    <link rel="preconnect" href="">
+    <!--не забудь подключить стайл шит-->
 </head>
 <body>
     <!--шапка-->
-    <header>
-        <nav>
-        <a lang="en" href="/"><span>Web</span>Studio</a>
-        <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+    <header class="header">
+        <nav class="header-navigation">
+        <a class="header-logo" lang="en" href="/"><span>Web</span>Studio</a>
+        <ul class="list header-list">
+            <li class="header-item"><a class="link header-link" href="">Студия</a></li>
+            <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
+            <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
         </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--тело-->
