стили до кнопки

--- a/index.html
+++ b/index.html
@@ -22,21 +22,18 @@
             <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
         </ul>
         </nav>
-        <ul>
-            <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="list header-list">
+            <li><a class="link header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--тело-->
     <main>
     <!--банер-->
-    <div>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="baner">
+            <h1>Эффективные решения<br>для вашего бизнеса</h1>
+            <button class="btn-baner" type="button">Заказать услугу</button>
         </section>
-    </div>
-    
     <!--список под банером-->
     <section>
         <ul>
