--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
     <footer >
         <a class="logo link" lang="en" href="/">Web<span class="logo-word-footer">Studio</span></a>
         <address>
-        <ul>
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
+        <ul class="list">
+            <li class="footer-addres">г. Киев, пр-т Леси Украинки, 26</li>
             <li>
-                <a href="mailto:info@example.com">info@example.com</a>
+                <a class="link footer-contakts header-contact" href="mailto:info@example.com">info@example.com</a>
             </li>
             <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="link footer-contakts header-contact" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
-        </ul>
+        
         </address>  
     </footer>
 </body>
