--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="logo link" lang="en" href="/">Web<span class="logo-word-header">Studio</span></a>
         <ul class="list header-list">
             <li class="header-item"><a class="link header-link" href="">Студия</a></li>
-            <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
+            <li class="header-item"><a class="link header-link" href="./portfolio.html">Портфолио</a></li>
             <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
         </ul>
         </nav>
