--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,16 @@
         </ul>
     </header>
     <!--тело-->
+    <main>
+        <ul>
+            <li><button type="button">Все</button>
+            <li><button type="button">Веб-сайты</button>
+            <li><button type="button">Приложения</button>
+            <li><button type="button">Дизайн</button>
+            <li><button type="button">Маркетинг</button>
+            
+        </ul>
+    </main>
     <!--низ-->
     <footer>
         <a class="logo link" lang="en" href="/">Web<span class="logo-word-footer">Studio</span></a>
