--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,60 @@
     </header>
     <!--тело-->
     <main>
-        <ul>
-            <li><button type="button">Все</button>
-            <li><button type="button">Веб-сайты</button>
-            <li><button type="button">Приложения</button>
-            <li><button type="button">Дизайн</button>
-            <li><button type="button">Маркетинг</button>
+        <ul class="list" >
+            <li><button class="btn-portf" type="button">Все</button>
+            <li><button class="btn-portf" type="button">Веб-сайты</button>
+            <li><button class="btn-portf" type="button">Приложения</button>
+            <li><button class="btn-portf" type="button">Дизайн</button>
+            <li><button class="btn-portf" type="button">Маркетинг</button>
             
+        </ul>
+        <ul class="list">
+            <li>
+            <img src="/images/porfolio1.jpg" alt="изобр.1" width="370"/>
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="/images/porfolio2.jpg" alt="изобр.2" width="370" />
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="/images/porfolio3.jpg" alt="изобр.3" width="370" />
+                <h2>Ресторан Seafood</h2>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="/images/porfolio4.jpg" alt="изобр.4" width="370" />
+                <h2>Проект Prime</h2>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="/images/porfolio5.jpg" alt="изобр.5" width="370" />
+                <h2>Проект Boxes</h2>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="/images/porfolio6.jpg" alt="изобр.6" width="370" />
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="/images/porfolio7.jpg" alt="изобр.7" width="370" />
+                <h2>Издание Limited Edition</h2>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="/images/porfolio8.jpg" alt="изобр.8" width="370" />
+                <h2>Проект LAB</h2>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="/images/porfolio9.jpg" alt="изобр.9" width="370" />
+                <h2>Growing Business</h2>
+                <p>Приложение</p>
+            </li>
         </ul>
     </main>
     <!--низ-->
